<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/percentageCalculationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/percentage_calculation"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/whatIsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/percentageCalculationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/what_is"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ofTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/percentageCalculationTextView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="149dp"
        android:text="@string/of"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatIsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/percentageEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whatIsTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_percentage"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/numberEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ofTextView"
        android:gravity="center"
        android:ems="10"
        android:hint="Enter Number"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberEditView"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:background="@android:color/holo_red_dark"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/calculate"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/percentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalTextView"
        android:layout_alignRight="@id/percentageEditView"
        android:text="%"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>